almost finished backend (added getComments)
